--- a/public/home.html
+++ b/public/home.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="../Pages/Home/home.css">
 
 </head>
 
-<body background="../Home/Assets/bg7.jpg">
+<body background="../Pages/Home/Assets/bg7.jpg">
     <div>
-        <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" ></iframe>
+        <iframe src="../Components/Navbar/navbar.html" frameborder="0" width="100%" ></iframe>
     </div>
 
     <div class="center">
@@ -27,7 +27,7 @@
     </div>
 
     <div class="scroll">
-        <img id="scrollImage" src="../Home/Assets/scroll.png" alt="scroll" width="70px">
+        <img id="scrollImage" src="../Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
     </div>
 
     <div class="spacer"></div>
@@ -42,39 +42,39 @@
         <div class="row">
             <div>
                 <iframe
-                    src="../../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
+                    src="../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
                     class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
+                    src="../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
                     class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
+                    src="../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
                     class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
+                    src="../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
                     class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
         <div class="row">
             <div>
                 <iframe
-                    src="../../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
+                    src="../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
                     class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
+                    src="../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
                     class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
+                    src="../Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/"
                     class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
@@ -82,7 +82,7 @@
 
 
     <div class="scroll">
-        <img id="scrollImage2" src="../Home/Assets/scroll.png" alt="scroll" width="70px">
+        <img id="scrollImage2" src="../Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
     </div>
 
 
@@ -93,16 +93,16 @@
     <div>
         <div class="row">
             <div style="margin-right: 40px;">
-                <iframe src="../../Components/Testimonial/testimonial.html?name=John&description=Web Developer"
+                <iframe src="../Components/Testimonial/testimonial.html?name=John&description=Web Developer"
                     style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
 
             <div style="margin-right: 40px;">
-                <iframe src="../../Components/Testimonial/testimonial.html?name=John&description=Web Developer"
+                <iframe src="../Components/Testimonial/testimonial.html?name=John&description=Web Developer"
                     style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
-                <iframe src="../../Components/Testimonial/testimonial.html?name=John&description=Web Developer"
+                <iframe src="../Components/Testimonial/testimonial.html?name=John&description=Web Developer"
                     style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
@@ -112,7 +112,7 @@
 
 
     <footer>
-        <iframe src="../../Components/Footer/footer.html" frameborder="0" width="100%" height="260px"></iframe>
+        <iframe src="../Components/Footer/footer.html" frameborder="0" width="100%" height="260px"></iframe>
     </footer>
     
 
