--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 
     <footer>
-        <iframe src="src/Components/Footer/footer.html" frameborder="0" width="100%" height="260px"></iframe>
+        <iframe class="ft" src="src/Components/Footer/footer.html" frameborder="0" width="100%" height="260px"></iframe>
     </footer>
 
 
