--- a/src/Pages/Team/team.html
+++ b/src/Pages/Team/team.html
@@ -6,12 +6,12 @@
     <title>Team</title>
     <link rel="stylesheet" href="team.css">
 </head>
-<body background="../Team/Assets/bg.jpg">
+<body>
     <div>
-        <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%"></iframe>
+        <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
-    <h2 class="title">TEAM 23-24</h2>
+    <h2 class="title">TEAM 2023 - 2024</h2>
 
     <div class="spacer"></div>
 
