--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 </head>
 
-<body background="src/Pages/Home/Assets/bg.jpg">
+<body>
     <div>
-        <iframe src="src/Components/Navbar/navbar.html" frameborder="0" width="100%"></iframe>
+        <iframe src="../src/Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
     <div class="center">
@@ -22,12 +22,12 @@
             BVDUDET ACM SC
         </p>
         <p class="tag">
-            TAG LINE
+            SHAPING THE FUTURE
         </p>
     </div>
 
     <div class="scroll">
-        <img id="scrollImage" src="src/Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
+        <img id="scrollImage" src="../src/Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
     </div>
 
     <div class="spacer"></div>
@@ -40,54 +40,54 @@
 
     <div>
         <div class="row">
-            <div>
+            <div class="rd">
                 <iframe
-                    src="src/Components/Card/card.html?name=Dr. Kamal Mehta&description=Faculty Mentor&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="src/Components/Card/card.html?name=Prof. Dhwaniket Kamble&description=Faculty Sponsor&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
+            </div>
+            <div id="cf">
+                <iframe
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="src/Components/Card/card.html?name=Prof. Poonam Kapse&description=Main Co-ordinator&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div>
-                <iframe
-                    src="src/Components/Card/card.html?name=Prof. Diksha Bhalerao&description=Vice Co-ordinator&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
         <div class="row">
             <div>
                 <iframe
-                    src="src/Components/Card/card.html?name=Prof. Santosh Rathod&description=Website Co-ordinator&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="src/Components/Card/card.html?name=Prof. Dipika Sharma&description=Website Co-ordinator&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="src/Components/Card/card.html?name=Prof. Sunita Kumar&description=Newsletter Co-ordinators&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="src/Components/Card/card.html?name=Prof. Snehal Lohi&description=Newsletter Co-ordinators&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
     </div>
 
 
     <div class="scroll">
-        <img id="scrollImage2" src="src/Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
+        <img id="scrollImage2" src="../src/Pages/Home/Assets/scroll.png" alt="scroll" width="70px">
     </div>
 
 
@@ -98,16 +98,19 @@
     <div>
         <div class="row">
             <div style="margin-right: 40px;">
-                <iframe src="src/Components/Testimonial/testimonial.html?name=John&description=Web Developer"
+                <iframe
+                    src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
                     style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
 
             <div style="margin-right: 40px;">
-                <iframe src="src/Components/Testimonial/testimonial.html?name=John&description=Web Developer"
+                <iframe
+                    src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
                     style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
-                <iframe src="src/Components/Testimonial/testimonial.html?name=John&description=Web Developer"
+                <iframe
+                    src="../src/Components/Testimonial/testimonial.html?name=John&description=Web Developer&pic=/src/Components/Testimonial/Assets/card.png"
                     style="border-radius: 10px;" class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
@@ -117,7 +120,8 @@
 
 
     <footer>
-        <iframe class="ft" src="src/Components/Footer/footer.html" frameborder="0" width="100%" height="260px"></iframe>
+        <iframe class="ft" src="../src/Components/Footer/footer.html" frameborder="0" width="100%"
+            height="260px"></iframe>
     </footer>
 
 
@@ -149,7 +153,7 @@
     <script>
         var scrollImage = document.getElementById('scrollImage');
         scrollImage.addEventListener('click', function () {
-            var scrollToY = 745;
+            var scrollToY = 735;
             window.scrollTo({
                 top: scrollToY,
                 behavior: 'smooth'
@@ -160,7 +164,7 @@
     <script>
         var scrollImage = document.getElementById('scrollImage2');
         scrollImage.addEventListener('click', function () {
-            var scrollToY = 1590;
+            var scrollToY = 1500;
             window.scrollTo({
                 top: scrollToY,
                 behavior: 'smooth'
