--- a/src/Pages/Team/team.html
+++ b/src/Pages/Team/team.html
@@ -6,7 +6,7 @@
     <title>Team</title>
     <link rel="stylesheet" href="team.css">
 </head>
-<body>
+<body background="../Team/Assets/bg.jpg">
     <div>
         <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
@@ -19,32 +19,12 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Sakshi Jadhav&description=Chairperson&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Sakshi Jadhav&description=Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Gaurav Desale&description=Vice Chairperson&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Fahim Kham&description=Secretary&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shubham Sontakke&description=Treasurer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Aviral Dev&description=Vice Treasurer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Gaurav Desale&description=Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -54,32 +34,17 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Varshita Nalluri&description=ACM-Women Chairperson&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Fahim Kham&description=Secretary&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Kamran Khan&description=Technical Head&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Shubham Sontakke&description=Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Shivam Bhosle&description=Web Master&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shubham Kumavat&description=Web Co-ordinator&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Aviral Dev&description=Vice Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -89,32 +54,12 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Saloni Wani&description=Creativity Head&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Varshita Nalluri&description=ACM-Women Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Khushi Raj&description=Organizational Head&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Disha Jain&description=Overall Event Co-ordinator&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Yashovardhan Kathika&description=Photographer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Souti Samanta&description=Graphics Master&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -124,12 +69,67 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Kashish Durgapal&description=Publicity Head&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Kamran Khan&description=Technical Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Shudhanshu Mishra&description=Membership Head&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Shivam Bhosle&description=Web Master&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Shubham Kumavat&description=Web Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="row">
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Saloni Wani&description=Creativity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Khushi Raj&description=Organizational Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="row">
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Disha Jain&description=Overall Event Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Yashovardhan Kathika&description=Photographer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Souti Samanta&description=Graphics Master&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="row">
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Kashish Durgapal&description=Publicity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Shudhanshu Mishra&description=Membership Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
