--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 
-<body>
+<body background="../src/Pages/Home/Assets/bg.jpg">
     <div>
         <iframe src="../src/Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
@@ -42,44 +42,44 @@
         <div class="row">
             <div class="rd">
                 <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    src="../src/Components/Card/card.html?name=Prof. Dhwaniket Kamble&description=Faculty Sponsor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                     class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
-            </div>
-            <div id="cf">
-                <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    src="../src/Components/Card/card.html?name=Dr. Kamal Mehta&description=Faculty Mentor&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                     class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    src="../src/Components/Card/card.html?name=Prof. Poonam Kapse&description=Main Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    class="cardFrame" frameborder="0" scrolling="no"></iframe>
+            </div>
+            <div>
+                <iframe
+                    src="../src/Components/Card/card.html?name=rof. Diksha Bhalerao&description=Vice Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                     class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
         <div class="row">
             <div>
                 <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    src="../src/Components/Card/card.html?name=Prof. Santosh Rathod&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                     class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    src="../src/Components/Card/card.html?name=Prof. Dipika Sharma&description=Website Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                     class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    src="../src/Components/Card/card.html?name=Prof. Sunita Kumar&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                     class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
             <div>
                 <iframe
-                    src="../src/Components/Card/card.html?name=John&description=Web Developer&fblk=https://www.facebook.com/&twlk=https://www.twitter.com/&inlk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                    src="../src/Components/Card/card.html?name=Prof. Snehal Lohi&description=Newsletter Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
                     class="cardFrame" frameborder="0" scrolling="no"></iframe>
             </div>
         </div>
