--- a/src/Pages/Team/team.html
+++ b/src/Pages/Team/team.html
@@ -19,32 +19,12 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Sakshi Jadhav&description=Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Sakshi Jadhav&description=Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Sakshi Jadhav.png&backImage=/src/Pages/Team/Assets/Sakshi Jadhav.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Gaurav Desale&description=Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Fahim Kham&description=Secretary&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shubham Sontakke&description=Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Aviral Dev&description=Vice Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Gaurav Desale&description=Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Gaurav Desale.jpg&backImage=/src/Pages/Team/Assets/Gaurav Desale.jpg"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -54,32 +34,17 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Varshita Nalluri&description=ACM-Women Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Fahim Khan&description=Secretary&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Fahim Khan.jpg&backImage=/src/Pages/Team/Assets/Fahim Khan.jpg"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Kamran Khan&description=Technical Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Shubham Sontakke&description=Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shubham Sontakke.png&backImage=/src/Pages/Team/Assets/Shubham Sontakke.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Shivam Bhosle&description=Web Master&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Shubham Kumavat&description=Web Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Aviral Dev&description=Vice Treasurer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg&backImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -89,32 +54,12 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Saloni Wani&description=Creativity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Varshita Nalluri&description=ACM-Women Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Varshita Nalluri.jpg&backImage=/src/Pages/Team/Assets/Varshita Nalluri.jpg"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Khushi Raj&description=Organizational Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-    </div>
-
-    <div class="spacer"></div>
-
-    <div class="row">
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Disha Jain&description=Overall Event Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Yashovardhan Kathika&description=Photographer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
-                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
-        </div>
-        <div>
-            <iframe
-                src="../../Components/Card/card.html?name=Souti Samanta&description=Graphics Master&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Nishtha Yadav&description=ACM-Women Vice Chairperson&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Nishtha Yadav.jpg&backImage=/src/Pages/Team/Assets/Nishtha Yadav.jpg"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
@@ -124,12 +69,67 @@
     <div class="row">
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Kashish Durgapal&description=Publicity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Kamran Khan&description=Technical Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Kamran Khan.png&backImage=/src/Pages/Team/Assets/Kamran Khan.png"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
         <div>
             <iframe
-                src="../../Components/Card/card.html?name=Shudhanshu Mishra&description=Membership Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Components/Card/Assets/card.png&backImage=/src/Components/Card/Assets/card.png"
+                src="../../Components/Card/card.html?name=Shivam Bhosle&description=Web Master&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg&backImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Shubham Kumavat&description=Web Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shubham Kumavat.jpg&backImage=/src/Pages/Team/Assets/Shubham Kumavat.jpg"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="row">
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Saloni Wani&description=Creativity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg&backImage=/src/Pages/Team/Assets/Shivam Bhosle.jpg"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Khushi Raj&description=Organizational Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Khushi Raj.png&backImage=/src/Pages/Team/Assets/Khushi Raj.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="row">
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Disha Jain&description=Overall Event Co-ordinator&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Disha Jain.jpg&backImage=/src/Pages/Team/Assets/Disha Jain.jpg"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Yashovardhan Kathika&description=Photographer&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Kathika Yashovardhan.jpg&backImage=/src/Pages/Team/Assets/Kathika Yashovardhan.jpg"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Souti Samanta&description=Graphics Master&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Souti Samanta.png&backImage=/src/Pages/Team/Assets/Souti Samanta.png"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div class="row">
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Kashish Durgapal&description=Publicity Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Kashish Durgapal.jpg&backImage=/src/Pages/Team/Assets/Kashish Durgapal.jpg"
+                class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
+        </div>
+        <div>
+            <iframe
+                src="../../Components/Card/card.html?name=Shudhanshu Mishra&description=Membership Head&gilk=https://www.github.com/&gllk=https://www.instagram.com/&lilk=https://www.linkedin.com/&frontImage=/src/Pages/Team/Assets/Sudhanshu Mishra.jpg&backImage=/src/Pages/Team/Assets/Sudhanshu Mishra.jpg"
                 class="cardFrame" width="100%" height="auto" frameborder="0" scrolling="no"></iframe>
         </div>
     </div>
