--- a/src/Pages/About/about.html
+++ b/src/Pages/About/about.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="about.css">
     <title>About</title>
 </head>
-<body background="../About/Assets/bg7.jpg">
+<body background="../About/Assets/bg.jpg">
     <div>
-        <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" ></iframe>
+        <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
     </div>
 
 
