--- a/src/Pages/Gallery/gallery.html
+++ b/src/Pages/Gallery/gallery.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="gallery.css">
+    <title>Gallery</title>
 </head>
-<body>
+<body background="../Gallery/Assets/bg.jpg">
+    <div>
+        <iframe src="../../Components/Navbar/navbar.html" frameborder="0" width="100%" scrolling="no"></iframe>
+    </div>
+
+
+
+    <footer>
+        <iframe src="../../Components/Footer/footer.html" frameborder="0" width="100%" height="260px"></iframe>
+    </footer>
     
 </body>
 </html>
